input spacing fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -989,8 +989,6 @@ hr.line.align-right {
 	font-size: @font-swatch5-font-size;
 	color: @font-swatch5-color;
 	text-indent: 12px;
-	margin-top: 6px;
-	margin-bottom: 30px;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
